# matest

./: .gitignore  CMakeLists.txt  ChangeLog.txt  Doxyfile  History.txt  MaTest  MaTest.c  MaTest.h  Makefile  Makefile-mingw  Makefile-win  Makefile.am  Makefile.in  Readme.txt  ToDo.md  Toolchain-mingw32.cmake  configure  configure.ac  connectives.c  evaluation.c  logics.h  matest  matest.iss  matest.ui  user.c  variables.c  w_dimmension.ui  wffs_pn.c  wffs_polk.c
MaTest-2/: !matest  CMakeLists.txt  MaTest.geany  ToDo.txt  changes.txt
MaTest-2/!doxygen/: !Doxyfile  Doxyfile.bak  Doxyfile.old
MaTest-2/!doxygen/html/: _ma_test_8c.html  _ma_test_8c__incl.map  _ma_test_8c__incl.md5  _ma_test_8h.html  _ma_test_8h__dep__incl.map  _ma_test_8h__dep__incl.md5  _ma_test_8h__incl.map  _ma_test_8h__incl.md5  annotated.html  callbacks_8c.html  callbacks_8c__incl.map  callbacks_8c__incl.md5  callbacks_8h.html  callbacks_8h__dep__incl.map  callbacks_8h__dep__incl.md5  callbacks_8h__incl.map  callbacks_8h__incl.md5  classes.html  connectives_8c.html  connectives_8c__incl.map  connectives_8c__incl.md5  doxygen.css  evaluation_8c.html  evaluation_8c__incl.map  evaluation_8c__incl.md5  files.html  formula.repository  functions.html  functions_vars.html  globals.html  globals_0x61.html  globals_0x62.html  globals_0x64.html  globals_0x65.html  globals_0x67.html  globals_0x69.html  globals_0x6c.html  globals_0x6d.html  globals_0x6e.html  globals_0x6f.html  (+56 more)
MaTest-2/!doxygen/latex/: Makefile  _ma_test_8c.tex  _ma_test_8c__incl.md5  _ma_test_8h.tex  _ma_test_8h__dep__incl.md5  _ma_test_8h__incl.md5  annotated.tex  callbacks_8c.tex  callbacks_8c__incl.md5  callbacks_8h.tex  callbacks_8h__dep__incl.md5  callbacks_8h__incl.md5  connectives_8c.tex  connectives_8c__incl.md5  doxygen.sty  evaluation_8c.tex  evaluation_8c__incl.md5  files.tex  logics_8h.tex  logics_8h__dep__incl.md5  logics_8h__incl.md5  other_8c.tex  parser__lifo_8c.tex  parser__lifo_8c__incl.md5  read_matrix_8c.tex  refman.aux  refman.idx  refman.out  refman.tex  refman.toc  struct___ll_b_con.tex  struct___ll_stack.tex  struct___ll_stack__coll__graph.md5  struct___ll_u_con.tex  (+21 more)
MaTest-2/!po/: .cvsignore  LINGUAS  Makefile  Makefile.in  Makefile.in.in  Makevars  Makevars.template  POTFILES  POTFILES.in  Rules-quot  boldquot.sed  en.txt  en@boldquot.header  en@quot.header  es.po  insert-header.sin  messages.pot  quot.sed  remove-potcdate.sin
MaTest-2/MaTest-1.3.2/: CMakeLists.txt  Readme.txt  about.ui  matest  matest.ui
MaTest-2/MaTest-1.3.beta1/: CMakeLists.txt  ChangeLog.txt  matest
MaTest-2/doc/: DNp.txt  DNp_pn.txt  algoritmo std a pn.txt  clasica.lyx  counter.lyx  datatype.fig  datatypes-svg.7z  datavar.fig  datos.lyx  def. conj. de matrices.txt  demo.ogv  inDNIp.txt  inDNp.txt  man-0.1.txt  man-1.0a.txt  man.pre.txt  man.txt  manual.lyx  matest.man  start.txt  template.lyx  teorem_dnp.txt  teoremas.txt
MaTest-2/src/: !readMatrix.c  MaTest.h  about.ui  callbacks.h  matest.ui.bak  matest.ui.bak.old  other.c  parser_lifo.c  read_martrices_file-old.c  trash.c  user.c
data/formulae/: DNp.txt  DNp_pn.txt
data/mtx/: CMI.txt  L100.txt
data/scripts/: DNIp.txt
docs/: History.txt  man-0.1.txt  man.pre.txt  man.txt  matest.man  start-1.0a.txt  start.txt
docs/assets/: matest-demo.ogv
src/: CMakeLists.txt  MaTest.c  MaTest.h  Makefile.am  Makefile.in  about.ui  callbacks.c  callbacks.h  connectives.c  evaluation.c  logics.h  matest-3.ui  matest-ng.ui  matest.ui  parser_lifo.c  user.c  user_gui.c  user_text.c  user_tui.c  variables.c  wffs_pn.c
src/logics/: CMakeLists.txt  connectives.c  logics.h  variables.c  wffs.c  wffs_pn.c  wffs_std.c
(+124 files in other folders)
